objects/BICE_P2C_Relationship__c.object
<CustomObject>
    <description>This custom junction object stores relationships between Contacts and PersonAccounts  For example, Donald Trump (Person Account) is the same person as the Contact (Donald Trump, CEO of Trump Enterprise).  A record will be created in this object to relate the contact record to the Person Account record</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>BICE P2C Relationships</relationshipLabel>
        <relationshipName>BICE_P2C_Relationships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PersonAccount__c</fullName>
        <label>PersonAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BICE P2C Relationships</relationshipLabel>
        <relationshipName>BICE_P2C_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Same Person</fullName>
                </value>
                <value>
                    <fullName>Partner Financial Advisor</fullName>
                </value>
                <value>
                    <fullName>Relative</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Household Dependent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BICE P2C Relationship</label>
    <nameField>
        <displayFormat>P2C-{00000}</displayFormat>
        <label>BICE P2C Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BICE P2C Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>